Добавлены 3 шаблонных cmdlet работающих через webapi. Начал проприсовывать архитектуру сервисов

--- a/SmartIT/SmartIT.FrontEnd/Views/Home/Company.cshtml
+++ b/SmartIT/SmartIT.FrontEnd/Views/Home/Company.cshtml
@@ -80,13 +80,13 @@
                     <tr>
                         <td>Date create:</td>
                         <td>
-                            <input type="datetime" data-bind="value:DateCreate" class="form-control" />
+                            <input type="datetime-local" data-bind="value:DateCreate" class="form-control" />
                         </td>
                     </tr>
                     <tr>
                         <td>Date cancel</td>
                         <td>
-                            <input type="datetime" data-bind="value:DateCancel" class="form-control" />
+                            <input type="datetime-local" data-bind="value:DateCancel" class="form-control" />
                         </td>
                     </tr>
                 </table>
